--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               </div>
               </div>
               <div class= "result">
-                  <div class="game d-flex justify-content-around h-75">
+                  <div class="game d-flex justify-content-around w-100">
                     <div class="left-col p-3 text-center d-flex justify-content-around flex-column">
                       <h2 class="text-uppercase text-white">you picked</h2>
                       <div class="rounded-circle left-ring">
